tests/machine/x/pl/group_by_left_join.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/group_by_left_join.pl:8: user:main Type error: `integer' expected, found `key' (an atom)

